## -*- makefile
##

EXTRA_DIST= \
	gtk_diff_against_modulesets.patch \
	gtk_diff_against_modulesets_2.patch \
	gtk_diff_against_modulesets_3.patch \
	gtkrc \
	gtkwaverc \
	gtkwave.bundle \
	gtkwave_files.icns \
	gtkwave.icns \
	gtkwave.pl \
	gtkwave_bin_launcher.sh \
	gtkwave_savefiles.icns \
	Info-gtkwave.plist \
	launcher.sh \
	make_bundle.sh

