## -*- makefile
##

EXTRA_DIST= \
	fst2Vcd.java \
	fstAPI.c \
	fstAPI.h \
	fstAPI.java \
	fstArrayType.java \
	fstAttrType.java \
	fstEnumValueType.java \
	fstFileType.java \
	fstHier.java \
	fstHierType.java \
	fstMiscType.java \
	fstPackType.java \
	fstReader.java \
	fstScopeType.java \
	fstSupplementalDataType.java \
	fstSupplementalVarType.java \
	fstVarDir.java \
	fstVarType.java \
	fstWriter.java \
	fstWriterPackType.java \
	Main.java \
	zzz_test.csh

