man_files = [
    'evcd2vcd.1',
    'fst2vcd.1',
    'fstminer.1',
    'gtkwave.1',
    'gtkwaverc.5',
    'lxt2miner.1',
    'lxt2vcd.1',
    'rtlbrowse.1',
    'shmidcat.1',
    'twinwave.1',
    'vcd2fst.1',
    'vcd2lxt.1',
    'vcd2lxt2.1',
    'vcd2vzt.1',
    'vzt2vcd.1',
    'vztminer.1',
    'xml2stems.1',
]

install_man(man_files)